--- a/css/style.css
+++ b/css/style.css
@@ -175,12 +175,18 @@ header .header .header__left .header__left__stars {
   gap: 8px;
   color: #27272A;
 }
+@media screen and (max-width: 800px) {
+  header .header {
+    gap: 32px;
+  }
+}
 @media screen and (max-width: 768px) {
   header .header {
     flex-wrap: wrap;
     justify-content: center;
     text-align: center;
     padding-top: 65px;
+    gap: 64px;
   }
   header .header .header__left .header__left__btns, header .header .header__left .header__left__stars {
     justify-content: center;
@@ -201,6 +207,9 @@ header .header .header__left .header__left__stars {
   }
 }
 
+main .markets__section {
+  margin-bottom: 128px;
+}
 main .markets__section .markets {
   box-shadow: 0px 0px 16px rgba(9, 24, 26, 0.04);
   border-radius: 4px;
@@ -343,7 +352,7 @@ main .markets__section .why__btc__markets .wbm__items .wbm__item p {
   }
 }
 main .trade__section {
-  margin-top: 200px;
+  margin-bottom: 128px;
 }
 main .trade__section h4 {
   color: #18181B;
@@ -401,6 +410,14 @@ main .trade__section .trade__section__blocks .trade__section__right {
   main .trade__section .trade__section__blocks .trade__section__left .trade__items .trade__item {
     flex: 1 1 100%;
     text-align: center;
+  }
+}
+@media screen and (max-width: 768px) {
+  main .markets__section, main .trade__section {
+    margin-bottom: 64px;
+  }
+  main .markets__section .why__btc__markets .wbm__items {
+    gap: 32px;
   }
 }
 main .wallet__section {
