--- a/css/style.scss
+++ b/css/style.scss
@@ -171,7 +171,7 @@ nav{
               }
             }
         }
-    }
+  }
     
 header{
        .header{
@@ -278,7 +278,7 @@ header{
 
     }
   }
-  main{
+main{
     .markets__section{
       margin-bottom: 128px;
       .markets{
@@ -451,137 +451,54 @@ header{
       }
     }
     
-    .trade__section{
+    .template__section{
       margin-bottom: 128px;
-      h4{
-        color:$firstBlack;
-        font-weight: 400;
-        font-size: 16px;
-      }
-
-      .trade__section__blocks{
-        display: flex;
-        justify-content: space-between;
-        gap:32px;
-
-        .trade__section__left{
-          flex:1 1 550px;
-          h2{
-            color:$firstBlack;
-            font-size: min(40px, max(20px + 2vw));
-            font-weight: 400;
-          }
-
-          .trade__items{
-            display: flex;
-            flex-wrap: wrap;
-            margin-top: 64px;
-            gap: 32px;
-            .trade__item{
-              flex: 1 1 calc(100%/3);
-
-              h6{
-                font-size: 16px;
-                color: $firstBlack;
-                font-weight: 400;
-                margin: 8px 0px 16px 0px;
-              }
-
-              p{
-                color: $firstBlack ;
-                font-size: 15px;
-                line-height: 24px;
-              }
-            }
-          }
-        }
-
-        .trade__section__right{
-          flex:1 1 550px;
-
-        }
-
-        @media screen and (max-width:$tablet){
-          flex-wrap: wrap;
-          .trade__section__right{
-
-            .trade__section__right__img{
-              img{
-                width: 100%;
-              }
-            }
-          }
-        }
-
-
-        
-        @media screen and (max-width:$mobileM){
-          .trade__section__left{
-            h2{
-              text-align: center;
-            }
-
-            .trade__items{
-              .trade__item{
-                flex: 1 1 100%;
-                text-align: center;
-              }
-            }
-          }
-
-      }
-    }
-  }
-
-  @media screen and (max-width: $mobileL)   {
-    .markets__section, .trade__section{
-      margin-bottom: 64px;
-    }
-    .markets__section{
-      .why__btc__markets{
-        .wbm__items{
-          gap: 32px;
-        }
-      }
-    }
-  }
-
-  .wallet__section{
-    margin-top: 220px;
-
-    h4{
-      margin-left: 552px;
-      color:$firstBlack;
-      font-weight: 400;
-      font-size: 16px;
-    }
-    .wallet__section__blocks{
       display: flex;
       justify-content: space-between;
+      align-items:center;
       gap:32px;
 
+      &:nth-child(odd){
+        .template__section__content{
+          order: 2;
+        }
 
-      .wallet__section__left{
+        .template__section__cover{
+          order: 1;
+        }
+
+        @media screen and (max-width: $tablet) {
+            .template__section__content{
+              order: 1;
+            }
+            .template__section__cover{
+              order: 2;
+            }
+         }
+       }
+
+     .template__section__content{
         flex:1 1 550px;
-      }
 
-      .wallet__section__right{
-        flex:1 1 550px;
+        h4{
+          color:$firstBlack;
+          font-weight: 400;
+          font-size: 16px;
+          text-transform: uppercase;
+        }
 
-        h3{
+        h2{
           color:$firstBlack;
           font-size: min(40px, max(20px + 2vw));
           font-weight: 400;
-          margin-top: 16px;
         }
 
-        .wallet__items{
+        .template__section__content__items{
           display: flex;
           flex-wrap: wrap;
           margin-top: 64px;
           gap: 32px;
-
-          .wallet__item{
+          .template__section__content__item{
             flex: 1 1 calc(100%/3);
 
             h6{
@@ -592,7 +509,7 @@ header{
             }
 
             p{
-              color: $secondBlack;
+              color: $firstBlack ;
               font-size: 15px;
               line-height: 24px;
             }
@@ -600,36 +517,158 @@ header{
         }
       }
 
-      @media screen and (max-width:$tablet){
-        flex-wrap: wrap;
-        .wallet__section__left{
+      .template__section__cover{
+        flex:1 1 550px;
 
-          .wallet__section__left__img{
-            img{
-              width: 100%;
+        img{
+          display: block;
+          width: 100%;
+        }
+
+      }
+
+        @media screen and (max-width:$tablet){
+          flex-wrap: wrap;
+          
+         .template__section__cover{
+          img{
+            width: 630px;
+            margin: 0 auto;
+          }
+         
+          }
+        }
+        
+        @media screen and (max-width:$mobileM){
+          .template__section__content{
+            h2{
+              text-align: center;
             }
+
+            .template__section__content__items{
+              .template__section__content__item  {
+                flex: 1 1 100%;
+                text-align: center;
+              }
+            }
+          }
+      }    
+    }
+
+    .vip__program__section{
+      background: #fafafa;
+      padding-top: 128px;
+
+      .container{
+
+        .vip__program__section__content{
+          max-width: 710px;
+          margin: 0 auto;
+          text-align: center;
+          color:$firstBlack;
+          h4{
+            font-size: 16px;
+            font-weight:400;
+            margin: 0 ;
+          }
+
+          h2{
+            font-weight: 400;
+            font-size: min(40px, max(20px + 2vw));
+            letter-spacing: 0.1px;
+            margin: 16px 0px 32px 0;
+          }
+
+          p{
+            line-height: 24px;
+            color: $secondBlack;
+            letter-spacing: 0.2px;
+            margin-bottom:48px ;
+          }
+
+          .vip__program__section__items{
+            display: flex;
+            justify-content: center;
+            align-items:center;
+            gap: 64px;
+            margin-bottom: 64px;
+
+            .vip__program__section__item{
+              display: flex;
+              align-items:center;
+              gap: 8px;
+              
+              h6{
+                font-size: 16px;
+                font-weight: 400;
+                margin: 0;
+              }
+            }
+
+            @media screen and (max-width: $mobileL) {
+              flex-wrap: wrap;
+            }
+
+            @media screen and (max-width: $mobileM) {
+              gap: 32px;
+            }
+
+            @media screen and (max-width: $mobileXS) {
+              .vip__program__section__item{
+                gap: 4px;
+
+                h6{
+                  font-size: 15px;
+                }
+              }
+            }
+
+          }
+
+          a{
+            display: block;
+            text-decoration: none;
+            padding: 9px 36px;
+            color: $firstBlack;
+            border: 1px solid $firstBlack;
+            border-radius: $br;
+            width: fit-content;
+            margin: 0 auto 64px auto;
+          }
+
+        }
+
+        .vip__program__section__cover{
+          img{
+            display: block;
+            width: 100%;
           }
         }
       }
-      
-      @media screen and (max-width:$mobileM){
-        .wallet__section__right{
-          h3{
-            text-align: center;
-          }
+    }
 
-          .wallet__items{
-            .wallet__item{
-              flex: 1 1 100%;
-              text-align: center;
-            }
-          }
+
+    @media screen and (max-width: $mobileL){
+    .markets__section, .template__section{
+      margin-bottom: 64px;
+    }
+
+    .template__section__content{
+      h4{
+        text-align: center;
+      }
+    }
+
+    .markets__section{
+      .why__btc__markets{
+        .wbm__items{
+          gap: 32px;
         }
-
+      }
     }
     }
   }
-}
+
  
    
 
