--- a/css/style.scss
+++ b/css/style.scss
@@ -529,7 +529,7 @@ main{
 
         @media screen and (max-width:$tablet){
           flex-wrap: wrap;
-          
+
          .template__section__cover{
           img{
             width: 630px;
@@ -645,6 +645,89 @@ main{
           }
         }
       }
+    }
+
+    .start__trading{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      padding-top: 122px;
+
+      h2{
+        font-weight: 400;
+        font-size: min(40px, max(20px + 2vw));
+        letter-spacing: 1px;
+        margin: 0px 0px 86px 0;
+
+      }
+
+      .start__trading__items{
+        display: flex;
+        justify-content: center;
+        gap: 64px;
+
+        .start__trading__item{
+          text-align: center;
+            max-width:260px;
+  
+            .icon{
+              margin-bottom: 32px;
+            }
+  
+            h6{
+              margin: 0;
+              color: $firstBlack;
+              font-weight: 400;
+              font-size: 18px;   
+            }
+  
+            p{
+              color: $secondBlack;
+              line-height: 24px;
+            }
+
+        }
+
+        @media screen and (max-width: $mobileL){
+          flex-wrap: wrap;
+          margin-top: 64px;
+          gap: 32px;       
+        }
+
+        @media screen and (max-width: $mobileXS){
+          gap: 16px;       
+        }
+
+      }
+
+      .start__trading__footer{
+        margin-top: 46px;
+
+        .get__started{
+          width: 156px;
+          a{
+            display: block;
+            padding: 9px 33px;
+            border-radius:$br;
+            text-decoration: none;
+            background: $primary;
+            color:$greenBlack;
+          }
+        }
+
+        .start__trading__stars{
+          display: flex;
+          align-items: center;
+          gap: 8px;
+          color:$secondBlack;
+          margin-top: 32px;
+        }
+      }
+
+ 
+
+
     }
 
 
