--- a/css/style.scss
+++ b/css/style.scss
@@ -730,6 +730,53 @@ main{
 
     }
 
+    .trade__app__section{
+      h2{
+        font-size: min(40px, max(20px + 2vw));
+        line-height: 48px;
+        letter-spacing: 1px;
+        font-weight: 400;
+        color:$nativBlack
+      }
+      p{
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 24px;
+        color:$secondBlack
+
+      }
+
+      .app{
+        padding-top: 30px ;
+        display: flex;
+        gap: 36px;
+
+        .app__stars{
+          display: flex;
+          align-items: center;
+          gap: 8px;
+          color:$secondBlack;
+          margin-top: 32px;
+        }
+        @media screen and (max-width: $mobileXS){
+          flex-wrap: wrap;
+          justify-content: center;
+          align-items:center;
+        }
+ 
+      }
+      a{
+        padding-top: 32px ;
+        display: block;
+        text-decoration: none;
+        color:$firstBlack;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 20px;
+
+      }
+    }
+
 
     @media screen and (max-width: $mobileL){
     .markets__section, .template__section{
