--- a/css/style.css
+++ b/css/style.css
@@ -617,6 +617,66 @@ main .trade__app__section a {
   font-weight: 400;
   line-height: 20px;
 }
+main hr {
+  margin-top: 100px;
+  background: #D4D4D8;
+}
+main .crypto__news__section {
+  display: flex;
+  justify-content: center;
+  flex-flow: column;
+  align-items: center;
+  gap: 64px;
+}
+main .crypto__news__section h2 {
+  font-weight: 400;
+  font-size: 31px;
+  line-height: 40px;
+}
+main .crypto__news__section .week__crypto__news__items {
+  display: flex;
+  justify-content: center;
+  align-content: space-between;
+  gap: 32px;
+}
+main .crypto__news__section .week__crypto__news__items .week__crypto__news__item .newsletter {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  gap: 24px;
+  background: #4CFDC7;
+  width: 64px;
+}
+main .crypto__news__section .week__crypto__news__items .week__crypto__news__item .newsletter a {
+  border: 1px solid #4CFDC7;
+  display: block;
+  text-decoration: none;
+}
+main .crypto__news__section .week__crypto__news__items .week__crypto__news__item a {
+  display: block;
+  text-decoration: none;
+  color: #18181B;
+}
+main .crypto__news__section a {
+  text-decoration: none;
+  color: #18181B;
+  font-size: 15px;
+  line-height: 20px;
+  font-weight: 400;
+}
+main .crypto__news__section .social__sites {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 32px;
+}
+main .crypto__news__section .social__sites a {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  text-decoration: none;
+  color: #18181B;
+}
 @media screen and (max-width: 768px) {
   main .markets__section, main .template__section {
     margin-bottom: 64px;
