--- a/css/style.scss
+++ b/css/style.scss
@@ -28,6 +28,22 @@ $tablePadding:16px 0px;
 
 body{
     font-family:"regular", sans-serif ;
+
+    &::-webkit-scrollbar{
+      width: 8px;
+    }
+
+    &::-webkit-scrollbar-track{
+      background: #f1f1f1;
+    }
+
+    &::-webkit-scrollbar-thumb{
+      background: #888;
+    }
+
+    &::-webkit-scrollbar-thumb:hover {
+      background: #555;
+    }
 }
 .container{
     max-width:1200px;
@@ -67,8 +83,28 @@ nav{
                 li{
                     list-style-type: none;
                     a{
-                    color:$firstBlack;
-                    text-decoration: none;
+                      position: relative;
+                      color:$firstBlack;
+                      text-decoration: none;
+                      transition: 0.3s;
+
+                      &::before {
+                        content: "";
+                        width: 0%;
+                        height: 3px;
+                        background:$primary;
+                        position: absolute;
+                        bottom:-10px;
+                        border-radius: $br;
+                        transition: 0.3s;
+                      }
+
+                      &:hover {
+                        color: $primary;
+                        &::before {
+                          width: 100%;
+                        }
+                      }
                      }
                 }
             }
@@ -82,17 +118,29 @@ nav{
                         cursor:pointer;
                         color:$firstBlack;
                         font-size: 12px;
+                        transition: 0.3s;
 
                         &#login{
                             border: 1px solid $firstBlack;
                             background: transparent;
 
+                            &:hover{
+                              background: $greenBlack;
+                              border-color:$greenBlack;
+                              color: #fff;
+                            }
                         }
 
                         &#signup{
                             border:1px solid $primary ;
                             background: $primary;
                             color: $greenBlack;
+
+                            &:hover{
+                              background: $green;
+                              border-color:$green;
+                              color: #fff;
+                            }
                         }
                         &#loginMob{
                           display:none;
@@ -218,15 +266,30 @@ header{
             border-radius:$br;
             text-decoration: none;
 
+
             &:nth-child(1){
               background: $primary;
               color:$greenBlack;
+
+              &:hover{
+                background: $green;
+                border-color:$green;
+                color: #fff;
+              }
             }
+
+           
 
             &:nth-child(2){
               background: transparent;
               color:$firstBlack;
               border: 1px solid $firstBlack;
+
+              &:hover{
+                background: $greenBlack;
+                border-color:$greenBlack;
+                color: #fff;
+              }
             }
 
           }
@@ -286,6 +349,7 @@ header{
 main{
     .markets__section{
       margin-bottom: 128px;
+
       .markets{
         box-shadow: 0px 0px 16px rgba(9, 24, 26, 0.04);
         border-radius:$br ;
@@ -310,6 +374,22 @@ main{
         .markets__table{
           overflow-y: hidden;
           overflow-x: auto;
+
+          &::-webkit-scrollbar{
+            height: 8px;
+          }
+      
+          &::-webkit-scrollbar-track{
+            background: #f1f1f1;
+          }
+      
+          &::-webkit-scrollbar-thumb{
+            background: #888;
+          }
+      
+          &::-webkit-scrollbar-thumb:hover {
+            background: #555;
+          }
 
           table{
             border-collapse:collapse;
@@ -355,6 +435,7 @@ main{
 
                   a{
                     display: block;
+                    width:54px;
                     text-decoration: none;
                     padding:$tablePadding;
                     background:$primary;
@@ -363,6 +444,14 @@ main{
                     cursor: pointer;
                     text-align: center;
                     font-size: 12px;
+                    margin:0px 0px 0px auto;
+                    transition:0.3s ;
+
+                    &:hover{
+                      background: $green;
+                      border-color:$green;
+                      color: #fff;
+                    }
                   }
 
                 }
@@ -638,12 +727,19 @@ main{
           a{
             display: block;
             text-decoration: none;
-            padding: 9px 36px;
+            padding: 9px 33px;
             color: $firstBlack;
             border: 1px solid $firstBlack;
             border-radius: $br;
             width: fit-content;
             margin: 0 auto 64px auto;
+            transition: 0.3s;
+
+            &:hover{
+              background: $greenBlack;
+              border-color:$greenBlack;
+              color: #fff;
+            }
           }
 
         }
@@ -732,6 +828,13 @@ main{
           color:$greenBlack;
           width: fit-content;
           margin: 0 auto 32px auto;
+          transition:0.3s ;
+
+          &:hover{
+            background: $green;
+            border-color:$green;
+            color: #fff;
+          }
         }
         .tree__easy__steps__stars{
           display: flex;
@@ -799,7 +902,7 @@ main{
         }
 
         a{
-          padding: 9px 36px;
+          padding: 9px 33px;
           display: block;
           text-decoration: none;
           color:$firstBlack;
@@ -807,6 +910,13 @@ main{
           border-radius: $br;
           width: fit-content;
           margin: 32px auto 0px auto;
+          transition: 0.3s;
+
+          &:hover{
+            background: $greenBlack;
+            border-color:$greenBlack;
+            color: #fff;
+          }
   
         }
       }
@@ -835,8 +945,9 @@ main{
           margin-bottom: 64px;
 
           .latest__news__item{
-            box-shadow: 0px 0px 16px rgba(9, 24, 26, 0.04);
+            box-shadow: 0px 0px 32px rgba(9, 24, 26, 0.1);
             border-radius:8px;
+            transition: all 0.3s;
 
             .latest__news__item__cover{
               max-width: 357px;
@@ -848,6 +959,7 @@ main{
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+                transition: transform  0.3s;
               }
             }
 
@@ -906,6 +1018,27 @@ main{
               text-decoration: none;
               color: $firstBlack;
               padding: 0px 16px 16px 16px;
+              transition: 0.3s;
+            }
+
+            &:hover{
+              box-shadow: 0px 0px 32px rgba(9, 24, 26, 0.3);
+
+              .latest__news__item__cover{
+                img{
+                  transform: scale(1.1);
+                }
+              }
+
+              h4{
+                a{
+                  color: $greenBlack;
+                }
+              }
+
+              .read__more{
+                color: $green;
+              }
             }
           }
           @media screen and (max-width:$tablet) {
@@ -919,6 +1052,10 @@ main{
           text-align: center;
           color: $firstBlack;
           margin-bottom: 64px;
+
+          &:hover{
+            text-decoration: underline;
+          }
         }
 
         .social {      
@@ -938,11 +1075,171 @@ main{
               text-decoration: none;
               font-size: 16px;
               color:$firstBlack;
+
+              svg{
+                path{
+                  transition: 0.3s;
+                }
+              }
+
+              &:hover{
+                color: $green;
+
+                svg{
+                  path{
+                    fill:$green ;
+                  }
+                }
+              }
             }
             
           }
         }
+
+        .before__footer{
+          h2{
+            text-align: center;
+            font-size:min(40px, max(20px + 2vw));
+            font-weight: 400;
+            margin: 0px auto 32px auto;
+            max-width: 420px;
+          }
+
+          a{
+            display: block;
+            padding: 9px 33px;
+            border-radius:$br;
+            text-decoration: none;
+            background: $primary;
+            color:$greenBlack;
+            width: fit-content;
+            margin: 0 auto 32px auto;
+            transition:0.3s ;
+
+            &:hover{
+              background: $green;
+              border-color:$green;
+              color: #fff;
+            }
+          }
+        }
       }
+footer{
+  margin-top: 128px;
+
+  .footer{
+    display: flex;
+    gap: 64px;
+
+    .footer__item{
+      flex: 1 1 227px;
+
+      h4{
+        margin-top: 0;
+        margin-bottom: 32px;
+        color:$firstBlack;
+        font-weight: 400;
+        font-size: 16px;
+      }
+
+      ul{
+        li{
+          list-style-type: none;
+          a{
+            display: block;
+            text-decoration: none;
+            color:$footerBlack;
+            margin-bottom: 16px;
+
+            svg{
+              path{
+                fill:$footerBlack;
+              }
+            }
+
+            &:hover{
+              text-decoration: underline;
+            }
+          }
+          img{
+            width: 120px;
+            height: 40px;
+            display: block;
+            margin-bottom: 8px;
+          }
+        }
+      }
+      &:nth-child(4){
+        li{
+          a{
+            display: flex;
+            align-items:center;
+            gap: 8px;
+          }
+        }
+      }
+    }
+
+    @media screen and (max-width:$tablet){
+      flex-wrap: wrap;
+    }
+
+    @media screen and (max-width:$mobileL){
+      text-align: center;
+
+      .footer__item{
+        flex: 1 1 100%;
+        li{
+          img{
+            margin: 0px auto 8px auto;
+          }
+        }
+
+        &:nth-child(4){
+          li{
+            a{
+              justify-content: center;
+            }
+          }
+        }
+      }
+    }
+
+  }
+
+  .footer__info{
+    text-align: center;
+    font-size: 14px;
+    color: $secondBlack;
+    margin-top: 128px;
+    margin-bottom: 64px;
+
+    p{
+      margin: 0;
+    }
+
+    .footer__info__top{
+      display: flex;
+      justify-content: center;
+      align-items:center;
+      gap: 32px;
+      margin-bottom: 16px;
+
+      @media screen and (max-width:$mobileL){
+        flex-wrap: wrap;
+        gap: 16px;
+
+        p{
+          width: 100%;
+        }
+      }
+    }
+
+    .footer__info__bottom{
+      glyph-orientation-horizontal: 12px;
+    }
+  }
+}     
     
     @media screen and (max-width: $mobileL){
     .markets__section{
